--- a/app/src/main/res/layout/item_rating.xml
+++ b/app/src/main/res/layout/item_rating.xml
@@ -11,17 +11,14 @@
 
         <RatingBar
             android:id="@+id/rating_bar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="160dp"
-            android:layout_marginTop="17dp"
-            android:layout_marginEnd="11dp"
-            android:layout_marginBottom="16dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginLeft="160dp"
-            android:layout_marginRight="11dp" />
+            style="?android:attr/ratingBarStyle"
+            android:layout_width="505dp"
+            android:layout_height="48dp"
+            android:numStars="10"
+            android:progressTint="@color/purple_200"
+            android:scaleX=".6"
+            android:scaleY=".6"
+            android:stepSize="0.5"
+            tools:layout_editor_absoluteY="26dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
