--- a/app/src/main/res/layout/item_game.xml
+++ b/app/src/main/res/layout/item_game.xml
@@ -16,6 +16,7 @@
             android:layout_height="match_parent"
             android:layout_marginEnd="1dp"
             android:text="rating"
+            android:textSize="30dp"
             android:gravity="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/game_title_textview"
@@ -25,49 +26,37 @@
 
         <TextView
             android:id="@+id/game_title_textview"
-            android:layout_width="130dp"
-            android:layout_height="32dp"
-            android:layout_marginStart="0dp"
-            android:layout_marginEnd="180dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="1dp"
-            android:text="TextView"
             android:gravity="center_horizontal"
+            android:text="TextView"
             app:layout_constraintBottom_toTopOf="@+id/release_date"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/game_rating_textview"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginLeft="1dp"
-            android:layout_marginRight="180dp" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/release_date"
-            android:layout_width="130dp"
-            android:layout_height="25dp"
+            android:layout_width="310dp"
+            android:layout_height="21dp"
             android:layout_marginStart="1dp"
+            android:layout_marginLeft="1dp"
             android:layout_marginTop="1dp"
-            android:layout_marginEnd="180dp"
             android:layout_marginBottom="2dp"
             android:text="TextView"
             app:layout_constraintBottom_toTopOf="@+id/game_platform_textview"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/game_rating_textview"
-            app:layout_constraintTop_toBottomOf="@+id/game_title_textview"
-            android:layout_marginLeft="1dp"
-            android:layout_marginRight="180dp" />
+            app:layout_constraintTop_toBottomOf="@+id/game_title_textview" />
 
         <TextView
             android:id="@+id/game_platform_textview"
-            android:layout_width="131dp"
-            android:layout_height="26dp"
+            android:layout_width="311dp"
+            android:layout_height="28dp"
             android:layout_marginStart="1dp"
             android:layout_marginLeft="1dp"
             android:layout_marginTop="1dp"
-            android:layout_marginEnd="180dp"
-            android:layout_marginRight="180dp"
-            android:layout_marginBottom="0dp"
             android:text="TextView"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/game_rating_textview"
             app:layout_constraintTop_toBottomOf="@+id/release_date" />
     </androidx.constraintlayout.widget.ConstraintLayout>
