--- a/app/src/main/res/layout/item_rating.xml
+++ b/app/src/main/res/layout/item_rating.xml
@@ -19,6 +19,18 @@
             android:scaleX=".6"
             android:scaleY=".6"
             android:stepSize="0.5"
-            tools:layout_editor_absoluteY="26dp" />
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="41dp" />
+
+        <TextView
+            android:id="@+id/username_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="3dp"
+            android:layout_marginLeft="3dp"
+            android:layout_marginTop="3dp"
+            android:text="TextView"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
