--- a/app/src/main/res/layout/activity_game_details.xml
+++ b/app/src/main/res/layout/activity_game_details.xml
@@ -5,20 +5,11 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <!-- Game Title -->
-
-    <!-- Cover Image -->
-
-    <!-- Platform -->
-
-    <!-- Release Date -->
 
     <ImageView
         android:id="@+id/logo_image"
         android:layout_width="82dp"
         android:layout_height="72dp"
-        android:layout_marginStart="21dp"
-        android:layout_marginLeft="21dp"
         android:layout_marginTop="0dp"
         android:src="@drawable/playavu"
         android:layout_alignTop="@id/home_button"
@@ -27,22 +18,23 @@
 
     <Button
         android:id="@+id/home_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_width="160dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginLeft="2dp"
         android:text="HOME"
-        app:layout_constraintEnd_toStartOf="@+id/details_button"
+        app:layout_constraintStart_toEndOf="@+id/logo_image"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/details_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_width="163dp"
+        android:layout_height="52dp"
+
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
         android:text="DETAILS"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/home_button"
         app:layout_constraintTop_toTopOf="parent" />
 
 
@@ -61,8 +53,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/details_list"
-        android:layout_width="413dp"
-        android:layout_height="247dp"
+        android:layout_width="407dp"
+        android:layout_height="251dp"
         android:layout_marginTop="51dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/description_textview" />
