--- a/app/src/main/res/layout/home_activity.xml
+++ b/app/src/main/res/layout/home_activity.xml
@@ -10,8 +10,8 @@
         android:id="@+id/logo_image"
         android:layout_width="82dp"
         android:layout_height="72dp"
-        android:layout_marginStart="21dp"
-        android:layout_marginLeft="21dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
         android:layout_marginTop="0dp"
         android:src="@drawable/playavu"
         android:layout_alignTop="@id/home_button"
@@ -44,36 +44,30 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/game_list"
-        android:layout_width="369dp"
-        android:layout_height="520dp"
-        android:layout_marginStart="32dp"
+        android:layout_width="408dp"
+        android:layout_height="516dp"
         android:layout_marginTop="64dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="64dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/search_query_edittext"
-        app:layout_constraintVertical_bias="0.515" />
+        app:layout_constraintTop_toBottomOf="@+id/search_query_edittext" />
 
     <Button
         android:id="@+id/home_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_width="150dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="11dp"
+        android:layout_marginLeft="11dp"
         android:text="HOME"
-        app:layout_constraintEnd_toStartOf="@+id/details_button"
+        app:layout_constraintStart_toEndOf="@+id/logo_image"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/details_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_width="155dp"
+        android:layout_height="57dp"
+        android:layout_marginStart="6dp"
+        android:layout_marginLeft="6dp"
         android:text="DETAILS"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/home_button"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
