--- a/app/src/main/res/layout/item_rating.xml
+++ b/app/src/main/res/layout/item_rating.xml
@@ -16,6 +16,7 @@
             android:layout_height="48dp"
             android:numStars="10"
             android:progressTint="@color/purple_200"
+            android:isIndicator="true"
             android:scaleX=".6"
             android:scaleY=".6"
             android:stepSize="0.5"
