--- a/app/src/main/res/layout/home_activity.xml
+++ b/app/src/main/res/layout/home_activity.xml
@@ -6,68 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".HomeActivity">
 
-    <ImageView
-        android:id="@+id/logo_image"
-        android:layout_width="82dp"
-        android:layout_height="72dp"
-        android:layout_marginStart="0dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginTop="0dp"
-        android:src="@drawable/playavu"
-        android:layout_alignTop="@id/home_button"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/search_query_edittext"
-        android:layout_width="303dp"
-        android:layout_height="54dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="85dp"
-        android:layout_marginEnd="4dp"
-        android:hint="search"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/nav_host_fragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/search_button">
-    </EditText>
+        app:layout_constraintBottom_toBottomOf="@id/bottom_nav"
+        app:defaultNavHost="true"
+        android:layout_marginBottom="60dp"
+        app:navGraph="@navigation/navigation" />
 
-    <Button
-        android:id="@+id/search_button"
-        android:layout_width="46dp"
-        android:layout_height="42dp"
-        android:layout_marginTop="85dp"
-        android:layout_marginEnd="8dp"
-        android:background="@android:drawable/ic_menu_search"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/search_query_edittext"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/game_list"
-        android:layout_width="408dp"
-        android:layout_height="516dp"
-        android:layout_marginTop="64dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/search_query_edittext" />
-
-    <Button
-        android:id="@+id/home_button"
-        android:layout_width="150dp"
-        android:layout_height="56dp"
-        android:layout_marginStart="11dp"
-        android:layout_marginLeft="11dp"
-        android:text="HOME"
-        app:layout_constraintStart_toEndOf="@+id/logo_image"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/details_button"
-        android:layout_width="155dp"
-        android:layout_height="57dp"
-        android:layout_marginStart="6dp"
-        android:layout_marginLeft="6dp"
-        android:text="DETAILS"
-        app:layout_constraintStart_toEndOf="@+id/home_button"
-        app:layout_constraintTop_toTopOf="parent" />
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:layout_height="60dp"
+        android:layout_width="match_parent"
+        android:id="@+id/bottom_nav"
+        app:layout_constraintTop_toBottomOf="@id/nav_host_fragment"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:menu="@menu/menu" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
