--- a/app/src/main/res/layout-land/fragment_game_details.xml
+++ b/app/src/main/res/layout-land/fragment_game_details.xml
@@ -8,8 +8,8 @@
 
     <TextView
         android:id="@+id/item_title_textview"
-        android:layout_width="303dp"
-        android:layout_height="20dp"
+        android:layout_width="150dp"
+        android:layout_height="17dp"
         android:layout_margin="16dp"
         android:text="Game Title"
         android:textSize="16sp"
@@ -18,8 +18,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/details_list"
-        android:layout_width="360dp"
-        android:layout_height="160dp"
+        android:layout_width="361dp"
+        android:layout_height="123dp"
         android:layout_marginTop="8dp"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -94,9 +94,29 @@
         android:id="@+id/cover_imageview"
         android:layout_width="70dp"
         android:layout_height="37dp"
+        android:layout_marginStart="120dp"
         app:layout_constraintStart_toEndOf="@+id/item_title_textview"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_launcher_background" />
+
+    <Button
+        android:id="@+id/favorite_button"
+        android:layout_width="51dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="2dp"
+        android:text="+"
+        app:layout_constraintStart_toEndOf="@+id/item_title_textview"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/delete_button"
+        android:layout_width="52dp"
+        android:layout_height="42dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="2dp"
+        android:text="-"
+        app:layout_constraintStart_toEndOf="@+id/favorite_button"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
