--- a/app/src/main/res/layout-land/fragment_game_details.xml
+++ b/app/src/main/res/layout-land/fragment_game_details.xml
@@ -6,11 +6,49 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
+    <EditText
+        android:id="@+id/ratingEditText"
+        android:layout_width="87dp"
+        android:layout_height="38dp"
+        android:layout_marginStart="33dp"
+        android:layout_marginTop="2dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="rating"
+        app:layout_constraintStart_toEndOf="@+id/addReview"
+        app:layout_constraintTop_toBottomOf="@+id/reviewEditText" />
+
+    <EditText
+        android:id="@+id/reviewEditText"
+        android:layout_width="89dp"
+        android:layout_height="38dp"
+        android:layout_marginStart="33dp"
+        android:layout_marginTop="4dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="review"
+        app:layout_constraintStart_toEndOf="@+id/addReview"
+        app:layout_constraintTop_toBottomOf="@+id/description_textview" />
+
+    <TextView
+        android:id="@+id/addReview"
+        android:layout_width="133dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="33dp"
+        android:text="Add Review"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toStartOf="@+id/ratingEditText"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/description_textview" />
+
     <TextView
         android:id="@+id/item_title_textview"
         android:layout_width="150dp"
         android:layout_height="17dp"
         android:layout_margin="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:text="Game Title"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,10 +58,10 @@
         android:id="@+id/details_list"
         android:layout_width="361dp"
         android:layout_height="123dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="2dp"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/description_textview" />
+        app:layout_constraintTop_toBottomOf="@+id/ratingEditText" />
 
     <TextView
         android:id="@+id/platform_textview"
@@ -83,8 +121,8 @@
 
     <TextView
         android:id="@+id/description_textview"
-        android:layout_width="363dp"
-        android:layout_height="76dp"
+        android:layout_width="360dp"
+        android:layout_height="36dp"
         android:text="Description"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -117,6 +155,16 @@
         android:text="-"
         app:layout_constraintStart_toEndOf="@+id/favorite_button"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/addReviewButton"
+        android:layout_width="53dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="27dp"
+        android:layout_marginTop="24dp"
+        android:text="+"
+        app:layout_constraintStart_toEndOf="@+id/reviewEditText"
+        app:layout_constraintTop_toBottomOf="@+id/description_textview" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
