--- a/app/src/main/res/layout/fragment_game_details.xml
+++ b/app/src/main/res/layout/fragment_game_details.xml
@@ -10,7 +10,6 @@
         android:id="@+id/logo_image"
         android:layout_width="82dp"
         android:layout_height="72dp"
-        android:layout_marginTop="0dp"
         android:src="@drawable/playavu"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -22,8 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="16dp"
         android:text="Game Title"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -138,6 +136,58 @@
         android:layout_marginTop="16dp"
         android:text="DELETE"
         app:layout_constraintStart_toEndOf="@+id/favorite_button"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/reviewTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=" Review"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/ratingTextView"
+        app:layout_constraintStart_toEndOf="@+id/cover_imageview" />
+
+    <TextView
+        android:id="@+id/ratingTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="12dp"
+        android:text="Rating"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/platform_textview"
+        app:layout_constraintStart_toEndOf="@+id/cover_imageview" />
+
+    <EditText
+        android:id="@+id/reviewEditText"
+        android:layout_width="85dp"
+        android:layout_height="41dp"
+        android:layout_marginStart="11dp"
+        android:layout_marginBottom="2dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="review"
+        app:layout_constraintBottom_toTopOf="@+id/ratingEditText"
+        app:layout_constraintStart_toEndOf="@+id/reviewTextView" />
+
+    <EditText
+        android:id="@+id/ratingEditText"
+        android:layout_width="83dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="20dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="rating"
+        app:layout_constraintBottom_toTopOf="@+id/platform_textview"
+        app:layout_constraintStart_toEndOf="@+id/ratingTextView" />
+
+    <Button
+        android:id="@+id/addReviewButton"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="26dp"
+        android:layout_marginTop="166dp"
+        android:text="+"
+        app:layout_constraintStart_toEndOf="@+id/reviewEditText"
         app:layout_constraintTop_toTopOf="parent" />
 
 
